# memri_linkedin

./: LinkedInGraph.py  MemriGraph.py  memri2noo.py  noo2memri.py  requirements.txt  test_connection.ipynb
data/: IlyaRadinsky.json  memri.json
memri/: MemriGraph.py  memri2noo.py  noo2memri.py
selenium/: LinkedInClient.py  browsers.json  readme.md  requirements.txt
src/: Dockerfile  build.sh  docker-compose.yml  metadata.json  readme.md  start.sh
src/linkedin/: LinkedInClient.py  requirements.txt  start_selenoid.sh  test_linkedin.py
src/linkedin-plugin/: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  metadata.json
src/linkedin-plugin/linkedin/: config.py  consumer.py  plugin.py  pod_update_queue.py  schema.py  tweepy_util.py
src/linkedin-plugin/tests/: assets.py  cached_session.py  test_plugin.py  test_requests.py  test_twitter_users.py
src/linkedin-plugin_tw/: .dockerignore  Makefile  README.md  mypy.ini  setup.cfg
src/linkedin-plugin_tw/linkedin/: __init__.py  plugin.py  schema.py
src/linkedin-plugin_tw/linkedin/cli/: __init__.py  main.py
src/linkedin-plugin_tw/tests/: conftest.py  test_ci_plugin.py  test_quote_tweets.py  test_tweepy_none.py
src/linkedin-plugin_tw/tests/assets/json_cache/: me.json  user.json
src/linkedin_plugin/: .gitignore  plugin.py  schema.py
src/memri/: LinkedInGraph.py  MemriGraph.py  memri2noo.py  memri_service.yml  noo2memri.py  requirements.txt  schema.py
src/selenium/: LinkedInClient.py  docker-compose.yml
src/vis/: index.html  pod.js  start.py  start.sh  utils.js  vgraph.html
vis/: index.html  start.py
(+4 files in other folders)
