[metadata]

name = twitter-v2
version = 0.0.1
description = Twitter Importer Plugin for Memri
author = Memri
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.memri.io/memri/twitter-v2
license = MPPL License
classifiers =
	Development Status :: 3 - Alpha
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pymemri == 0.0.43
    loguru ~= 0.6.0
    tweepy ~= 4.12.1


[options.extras_require]
dev =
    pytest ~= 7.0
    pre-commit ~= 2.20
    typer
    pytest-timeout ~= 2.1
    mypy
    types-all
    py2store

[mypy]
exclude = tests

[tool:pytest]
# make implementation of plugin under test  visible in the integration tests
pythonpath = .


[options.entry_points]
console_scripts =
    twitter-oauth = linkedin.cli.main:app
